# langchain_rss

./: .gitignore  main.py  pyproject.toml  rss_feeds.db
tools/: database.py  rssFeeder.py  summarizer.py  webscraper.py
