[project]
name = "langchain-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langdetect>=1.0.9",
    "lxml-html-clean>=0.4.3",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sqlmodel>=0.0.27",
]
